<resources>
    <string name="app_name">Usage monitor</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="options_refresh">Refresh</string>
    <string name="options_select_dates">Select date</string>
    <string name="options_select_today">Go to today</string>
    <string name="options_show_avg">Average On/Off</string>
    <string name="options_show_avg_toast">Average comparison enabled</string>
    <string name="options_hide_avg_toast">Average comparison disabled</string>

    <!-- Preferanser -->
    <string name="prefs_show_toast_text">Show unlocks for current day when unlocking phone</string>
    <string name="prefs_show_toast" translatable="false">SHOWTOAST</string>
    <string name="prefs_large_toast_text">Show large red message</string>
    <string name="prefs_large_toast" translatable="false">LARGETOAST</string>

    <!-- Hovedaktivitet -->
    <string name="tab_tittel_day">Day</string>
    <string name="tab_tittel_week">Week</string>
    <string name="tab_tittel_month">Month</string>
    <string name="tab_tittel_year">Year</string>

    <!-- DagFragment -->
    <string name="text_uses_day">Number of uses registered for</string>
    <string name="title_day_graph"># of uses/Hour</string>

    <!-- UkeFragment -->
    <string name="text_uses_week">Number of uses registered for</string>
    <string name="count_text_week">Week</string>
    <string name="title_week_graph"># of uses/Day</string>

    <!-- MaanedFragment -->
    <string name="text_uses_month">Number of uses registered for</string>
    <string name="title_month_graph"># of uses/Day</string>

    <!-- AarFragment -->
    <string name="text_uses_year">Number of uses registered for</string>
    <string name="title_year_graph"># of uses/Month</string>

    <!-- omdialog -->
    <string name="om_tittel">About this app</string>
    <string name="om_tekst">Coded by:
        \nMaja Sæterstøen
        \nStudent no. s198515
        \n\n\nThis app registers each time you unlock your phone.
        \nIn the settings you can set whether you want to be informed of how many times you have unlocked
        your phone so far on the current day when you unlock it.
        \n\nThe graph will show the usage for the selcted timeframe.
        \n\n\nIf you enable the averages comparison-graph, it will show the averages for the x-value perimeters in the selected tab.
        \n\nThis means that in the week-tab, the average will show the average use for all Mondays, Tuesdays, etc.
        \nIf in the Month-tab, it will show the average for the 1st of all months, the 2nd of all months, etc.
    </string>
    <string name="om_knapp">Ok</string>

</resources>
