<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".HovedAktivitet">

    <item android:id="@+id/option_select_dates"
        android:title="@string/options_select_dates"
        android:icon="@drawable/ic_date_range_white_48dp"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/option_show_average"
        android:title="@string/options_show_avg"
        android:icon="@drawable/ic_compare_arrows_white_48dp"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/option_refresh"
        android:title="@string/options_refresh"
        android:icon="@drawable/ic_autorenew_white_48dp"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/option_select_today"
        android:title="@string/options_select_today"
        android:icon="@drawable/ic_restore_white_48dp"
        android:orderInCategory="4"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_white_48dp"
        android:orderInCategory="800"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="999"
        app:showAsAction="never" />

</menu>
